[package]
name = "bclickerapi"
authors = ["makin"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.69"
built = { version = "0.6.0",  features = ["git2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.2", features = [ "runtime-actix-native-tls" , "postgres", "time", "chrono" ] }
futures = "0.3.26"
log = "0.4.17"
env_logger = "0.10.0"
serde_json = "1.0.93"

[build-dependencies]
built = { version = "0.6.0",  features = ["git2", "chrono"] }
