[package]
name = "bclicker-server"
authors = ["makin"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0"
built = { version = "0.7", features = ["git2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time", "chrono"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0"
actix-files = "0.6"
actix-extensible-rate-limit = "0.3"
awc = { version = "3.4", features = ["rustls"] }
scraper = "0.18"
chrono = "0.4"

[build-dependencies]
built = { version = "0.7", features = ["git2", "chrono"] }
